# hr

./: fitbit-2020-08-23.csv  fitbit-2020-08-24.csv  fitbit-2020-08-25.csv  mifit.csv  notebook.ipynb  pyproject.toml
compare-mifit-fitbit/: mifit.csv
compare-mifit-fitbit/fitbit/: 2020-08-26.csv  2020-08-27.csv
