[tool.poetry]
name = "hr"
version = "0.1.0"
description = "Jupyter notebook for analysing heart rate data"
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^5.4.3"
pandas = "^1.2.1"
seaborn = "^0.11.1"
numpy = "^1.19.5"
matplotlib = "^3.3.3"
scikit-learn = "^0.24.1"
jenkspy = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
